# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  25 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Skip consolefont setup when RC_TTY_NUMBER is set to 0.

  24 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Do not require portmap in netmount when nolock option is used with nfs
    mounts and fixup the test so that it actually works.

  24 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    Fix pppd metric, #193574 thanks to Martin Väth.

  21 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    Use a pty for prefixed output instead of pipes for stdout/stderr. This
    is so that programs can get information about the controlling terminal.
    This change was triggered by bug #188506 where it's possible that
    stdin, stdout and stderr didn't point to a terminal but ended up on one
    via our pipes. Using a pty means that stdout and stderr always point to
    a terminal, but we lose the ability to tell them apart.
    If there is not a pty available then we use un-prefixed output as normal.
    This change has also introduced the need for a signal pipe so that
    SIGCHLD can exit the loop cleanly.

  20 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    libeinfo now works out the number of columns from stdout rather than
    stdin, #188506.

  19 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    Added the checkown applet based on the work by Renato Caldas, #192682
    checkdir ensures that the specified files (or directories) are owned
    by the current user/group or as specified on the command line. You can
    optionally check permissions too.

    Change from /lib/rcscripts to /lib/rc and adjust our files so changing
    our libdir is much easier in future. This move makes sense it's so much
    more than a holding place for our scripts now. It also has the added
    benefit of not loading the splash plugin for rc4 and lower which is
    ABI incompatible with us now.
