@@ -143,6 +143,14 @@ static struct option longopts[] = {
 	longopts_COMMON
 	{ NULL,             0, NULL, 0}
 };
+static const char * const longopts_help[] = {
+	"",
+	"",
+	"",
+	"",
+	"",
+	longopts_help_COMMON
+};
 #include "_usage.c"
 
 int checkown (int argc, char **argv)
